@@ -1,4 +1,8 @@
 2011-06-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* man/xml-source/amanda-client.conf.5.xml: Add amdump-server.
+	* man/xml-source/amdump_client.8.xml: Fix doc.
+
+2011-06-21  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Taper/Scribe.pm: Fix add_tapelabel call.
 
 2011-06-20  Jean-Louis Martineau <martineau@zmanda.com>
